--- a/.github/workflows/deploy-itchio.yml
+++ b/.github/workflows/deploy-itchio.yml
@@ -39,14 +39,10 @@ jobs:
           path: godot-sandbox/build/web
 
       - name: Install butler
-        run: |
-          curl -L -o butler.zip https://broth.itch.ovh/butler/linux-amd64/LATEST/archive/default
-          unzip butler.zip
-          chmod +x butler
-          ./butler -V
+        uses: jdno/setup-butler@v1
 
       - name: Push to itch.io
         env:
           BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
         run: |
-          ./butler push godot-sandbox/build/web ${{ env.ITCH_GAME }}:web
+          butler push godot-sandbox/build/web ${{ env.ITCH_GAME }}:web
