--- a/.github/workflows/deploy-itchio.yml
+++ b/.github/workflows/deploy-itchio.yml
@@ -62,11 +62,15 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install signaling dependencies
+        run: npm install
+        working-directory: vercel-signaling
+
       - name: Deploy to Vercel
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
         run: |
           npm i -g vercel
-          vercel deploy --prod --token ${{ secrets.VERCEL_TOKEN }}
+          vercel deploy --prod --token ${{ secrets.VERCEL_TOKEN }} -e UPSTASH_REDIS_REST_URL=${{ secrets.UPSTASH_REDIS_REST_URL }} -e UPSTASH_REDIS_REST_TOKEN=${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
         working-directory: vercel-signaling
