--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,19 @@
 name: Release Build
 
 on:
+  push:
+    tags:
+      - 'v*'
   workflow_dispatch:
     inputs:
       version:
         description: 'Release version tag (e.g. v1.0.0)'
-        required: true
+        required: false
         type: string
 
 env:
   EXPORT_NAME: MiningDefense
+  VERSION: ${{ github.event.inputs.version || github.ref_name }}
 
 jobs:
   build-windows:
@@ -37,13 +41,13 @@ jobs:
       - name: Create zip
         run: |
           cd godot-sandbox/build/windows
-          zip -r ../../../${{ env.EXPORT_NAME }}-windows-${{ inputs.version }}.zip .
+          zip -r ../../../${{ env.EXPORT_NAME }}-windows-${{ env.VERSION }}.zip .
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: windows-build
-          path: ${{ env.EXPORT_NAME }}-windows-${{ inputs.version }}.zip
+          path: ${{ env.EXPORT_NAME }}-windows-${{ env.VERSION }}.zip
 
   create-release:
     name: Create GitHub Release
@@ -60,8 +64,8 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ inputs.version }}
-          name: Mining Defense ${{ inputs.version }}
+          tag_name: ${{ env.VERSION }}
+          name: Mining Defense ${{ env.VERSION }}
           generate_release_notes: true
           files: |
-            ${{ env.EXPORT_NAME }}-windows-${{ inputs.version }}.zip
+            ${{ env.EXPORT_NAME }}-windows-${{ env.VERSION }}.zip
