--- a/godot-sandbox/export_presets.cfg
+++ b/godot-sandbox/export_presets.cfg
@@ -178,6 +178,13 @@ debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=true
+application/bundle_identifier="com.miningdefense.game"
+application/short_version="1.0"
+application/version="1.0"
+application/icon=""
+application/icon_interpolation=4
+application/signature=""
+application/app_category=6
 codesign/codesign=0
 codesign/installer_identity=""
 codesign/apple_team_id=""
