--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,11 @@ on:
         description: 'Release version tag (e.g. v1.0.0)'
         required: false
         type: string
+      branch:
+        description: 'Branch to build from'
+        required: false
+        type: string
+        default: 'main'
 
 env:
   EXPORT_NAME: godot-sandbox
@@ -26,6 +31,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+          ref: ${{ github.event.inputs.branch || github.ref }}
 
       - name: Setup export templates
         run: |
@@ -69,6 +75,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+          ref: ${{ github.event.inputs.branch || github.ref }}
 
       - name: Setup export templates
         run: |
@@ -106,6 +113,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+          ref: ${{ github.event.inputs.branch || github.ref }}
 
       - name: Setup export templates
         run: |
